Sample application / PhoneGap and Sencha Touch: Started with picture folder screen, fixed scrolling

--- a/Sample application/PhoneGap and Sencha Touch/resources/css/patches.css
+++ b/Sample application/PhoneGap and Sencha Touch/resources/css/patches.css
@@ -7,3 +7,4 @@ img.order-detail-thumbnail { max-width: 100%; max-height: 100%; display: block; 
 .x-list { background-color: #A1BACC }
 .x-body { background-color: #A1BACC }
 .x-list-round .x-scroll-view { background-color: #A1BACC !important }
+img.picture-folder-file { max-width: 100%; display: block; margin: 0 auto; padding: 0 5px }
